<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/page_main_ek1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <View
                android:id="@+id/_bg__main_ek2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/_bg__main_ek2_shape" />

            <View
                android:id="@+id/ellipse_1"
                android:layout_width="1243dp"
                android:layout_height="1170dp"
                android:layout_marginStart="-61dp"
                android:layout_marginLeft="-61dp"
                android:layout_marginTop="-388dp"
                android:background="@drawable/intersection_1" />

            <ImageView
                android:id="@+id/guarantee"
                android:layout_width="111dp"
                android:layout_height="111dp"
                android:layout_marginStart="137dp"
                android:layout_marginLeft="137dp"
                android:layout_marginTop="61dp"
                android:contentDescription="guarantee"
                android:src="@drawable/guarantee" />

            <View
                android:id="@+id/rectangle_1"
                android:layout_width="257dp"
                android:layout_height="40dp"
                android:layout_marginStart="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="297dp"
                android:alpha="0.89999997615814"
                android:background="@drawable/rectangle_1_shape" />

            <EditText
                android:id="@+id/emailTextBox"
                android:layout_width="230dp"
                android:layout_height="45dp"
                android:layout_alignStart="@+id/rectangle_1"
                android:layout_alignTop="@+id/rectangle_1"
                android:layout_alignEnd="@+id/rectangle_1"
                android:layout_alignBottom="@+id/rectangle_1"
                android:layout_marginStart="13dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="-2dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textPersonName" />

            <View
                android:id="@+id/rectangle_2"
                android:layout_width="257dp"
                android:layout_height="40dp"
                android:layout_marginStart="65dp"
                android:layout_marginLeft="65dp"
                android:layout_marginTop="367dp"
                android:background="@drawable/rectangle_2_shape" />

            <EditText
                android:id="@+id/passwordTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/rectangle_2"
                android:layout_alignTop="@+id/rectangle_2"
                android:layout_alignEnd="@+id/rectangle_2"
                android:layout_alignBottom="@+id/rectangle_2"
                android:layout_marginStart="13dp"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="33dp"
                android:layout_marginBottom="0dp"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/email"
                android:layout_width="33dp"
                android:layout_height="18dp"
                android:layout_marginLeft="83dp"
                android:layout_marginTop="271dp"
                android:fontFamily="Segoe UI"
                android:text="@string/email_string"
                android:textColor="@color/email_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/password"
                android:layout_width="55dp"
                android:layout_height="18dp"
                android:layout_marginLeft="83dp"
                android:layout_marginTop="344dp"
                android:fontFamily="Segoe UI"
                android:text="@string/password_string"
                android:textColor="@color/email_color"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/path_2"
                android:layout_width="153dp"
                android:layout_height="53dp"
                android:layout_marginStart="116dp"
                android:layout_marginLeft="116dp"
                android:layout_marginTop="442dp"
                android:contentDescription="path_2"
                android:src="@drawable/path_2" />


            <TextView
                android:id="@+id/login"
                android:layout_width="64dp"
                android:layout_height="37dp"
                android:layout_alignStart="@+id/path_2"
                android:layout_alignTop="@+id/path_2"
                android:layout_alignEnd="@+id/path_2"
                android:layout_marginStart="44dp"
                android:layout_marginLeft="159dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="45dp"
                android:fontFamily="Segoe UI"
                android:text="@string/login_string"
                android:textColor="@color/email_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/new_here_"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_below="@+id/path_2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="80dp"
                android:fontFamily="Segoe UI"
                android:text="@string/new_here__string"
                android:textColor="@color/new_here__color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/enter_details_above_and_tap_the_button_below_"
                android:layout_width="152dp"
                android:layout_height="61dp"
                android:layout_below="@+id/new_here_"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="33dp"
                android:fontFamily="Segoe UI"
                android:text="@string/enter_details_above_and_tap_the_button_below__string"
                android:textColor="@color/new_here__color"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/dark______fab___1__standard__4_states_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="194dp" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/registerbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/path_2"
                android:layout_alignEnd="@+id/path_2"
                android:layout_marginTop="106dp"
                android:layout_marginEnd="-74dp"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_add_24" />


        </RelativeLayout>


        <TextView
            android:id="@+id/reference__"
            android:layout_width="104dp"
            android:layout_height="56dp"
            android:layout_marginLeft="426dp"
            android:layout_marginTop="-693dp"
            android:fontFamily="Roboto"
            android:text="@string/reference___string"
            android:textColor="@color/scan_the_device_qr_code_color"
            android:textSize="20sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>